--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="screen.css" media="screen" rel="stylesheet" type="text/css">
-		<title>YOUR NAME</title>
+		<title>Edgar Reyes</title>
 	</head>
 	<body class="index">
 		<div id="content">
-			<h1>Your Name</h1>
-			<p>One sentence about what this is.</p>
+			<h1>Edgar Reyes</h1>
+			<p>This is a personal portfolio.</p>
 		</div><!--content DIV-->
 	</body>
 </html>
