--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<div id="content">
 			<h1>Edgar Reyes</h1>
 			<p>This is a personal portfolio.</p>
+			<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/179441876/?autostart=false" frameborder="0" allowfullscreen></iframe>
 		</div><!--content DIV-->
 	</body>
 </html>
